// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Th checkGrammar=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkGrammar=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkHighlight=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkHighlight=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkSpaces=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkSpaces=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th className="my-classname" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th className="test-classname" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colSpan="3" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  colSpan="3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colSpan=3 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  colSpan={3}
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="brown" 1`] = `
<th
  className="color-schema-brown uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="brown-rich" 1`] = `
<th
  className="color-schema-brown-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="cyan" 1`] = `
<th
  className="color-schema-cyan uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="cyan-rich" 1`] = `
<th
  className="color-schema-cyan-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="default" 1`] = `
<th
  className="color-schema-default uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="green" 1`] = `
<th
  className="color-schema-green uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="green-rich" 1`] = `
<th
  className="color-schema-green-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="grey" 1`] = `
<th
  className="color-schema-grey uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="grey-rich" 1`] = `
<th
  className="color-schema-grey-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="orange" 1`] = `
<th
  className="color-schema-orange uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="orange-rich" 1`] = `
<th
  className="color-schema-orange-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="pink" 1`] = `
<th
  className="color-schema-pink uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="pink-rich" 1`] = `
<th
  className="color-schema-pink-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="purple" 1`] = `
<th
  className="color-schema-purple uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="purple-rich" 1`] = `
<th
  className="color-schema-purple-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="red" 1`] = `
<th
  className="color-schema-red uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="red-rich" 1`] = `
<th
  className="color-schema-red-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="yellow" 1`] = `
<th
  className="color-schema-yellow uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema="yellow-rich" 1`] = `
<th
  className="color-schema-yellow-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th content="This is Content from ContentMixin" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</th>
`;

exports[`UU5.Bricks.Table.Th content=12345 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</th>
`;

exports[`UU5.Bricks.Table.Th controlled=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th controlled=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th default props 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th disabled=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th disabled=false 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th disabled=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</th>
`;

exports[`UU5.Bricks.Table.Th disabled=true 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</th>
`;

exports[`UU5.Bricks.Table.Th docKit examples UU5.Bricks.Table.Th should render without crash 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID2"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID2-header"
    key="uuID2-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-thead
      colorSchema="danger"
      id="uuIDA"
      key="uuIDA"
    >
      <table-tr
        id="uuIDB"
      >
        <table-th
          colSpan="3"
          content="Name"
          id="uuIDA1"
          rowSpan={3}
        />
        <table-th
          colSpan={3}
          content="Rank"
          id="uuIDA2"
          rowSpan="3"
        />
        <table-th
          content="Promotion prospects"
          id="uuIDA3"
        />
      </table-tr>
    </table-thead>
    <table-tbody
      id="uuIDA4"
      key="uuIDA4"
    >
      <table-tr
        id="uuIDA5"
      >
        <table-td
          content="Rimmer"
          id="uuIDA6"
        />
        <table-td
          content="2nd class technician"
          id="uuIDA7"
        />
        <table-td
          content="comical"
          id="uuIDA8"
        />
      </table-tr>
    </table-tbody>
  </table>
</div>
`;

exports[`UU5.Bricks.Table.Th dynamic=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th dynamic=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th fullTextSearchPriority=0 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th fullTextSearchPriority=0 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden=false 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden=true 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th id="myId" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th id="test-id" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th ignoreHTML=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th ignoreHTML=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th mainAttrs=undefined 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th name="myName" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="bigBox" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="bigBoxCollection" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="box" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="box" 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="boxCollection" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="inline" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="inline" 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="page" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="smallBox" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="smallBoxCollection" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel="spa" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th noPrint=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th noPrint=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th pureRender=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th pureRender=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th rowSpan="3" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  rowSpan="3"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th rowSpan=3 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  rowSpan={3}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th selected=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th selected=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th style="padding:8px; borderRadius: 2px" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th style={"backgroundColor":"red","color":"blue"} 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th style={"margin":8} 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th textCorrector=false 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th textCorrector=true 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th tooltip="My Tooltip" 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
